# binance_futures_trader

./: .dockerignore  .gitignore  AUTO_BACKFILL_FEATURE.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  SOLUTION_SUMMARY.md  Z_SCORE_BUG_FIX.md  check_database.py  check_positions.py  class_aware_filters_specification.md  config.example.yaml  critical_fixes_v2_specification.md  critical_fixes_v3_specification.md  docker-compose.yml  pyproject.toml  trading_improvements_specification.md
detector/: __init__.py  __main__.py  aggregator.py  alerts.py  backfill.py  binance_rest.py  binance_ws.py  binance_ws_picows.py  config.py  detector.py  features.py  features_extended.py  main.py  models.py  position_manager.py  report.py  storage.py  trading_improvements.py  utils.py
docs/: QUICKSTART.md  QUICK_REFERENCE.md
docs/archive/: BACKFILL_FIX.md  BUG_FIX_REPORT.md  DATA_VALIDATION_FEATURE.md  FINAL_SUMMARY.md
docs/development/: ImplementationPlan_Docker.md  ImplementationPlan_WIN_RATE_MAX.md  ResearchPack_Docker_Poetry.md  ResearchPack_WIN_RATE_MAX.md
docs/features/: CHECK_POSITIONS_VERIFICATION.md  ENTRY_TRIGGER_FIX_PLAN.md  POSITION_MANAGER_SUMMARY.md  TELEGRAM_NOTIFICATIONS.md  TELEGRAM_NOTIFICATIONS_COMPLETE.md  WIN_RATE_MAX_NO_SECTOR_profile.md
tests/: __init__.py  test_aggregator.py  test_cooldown.py  test_detector_rules.py  test_features.py  test_hybrid_strategy.py  test_position_manager.py  test_sector_diffusion.py  test_win_rate_filters.py
tests/integration/: conftest.py  test_backfill_features.py  test_check_positions_integration.py
