[tool.poetry]
name = "binance-alert-manager"
version = "0.1.0"
description = "Binance Sector Shot Detector - Real-time anomaly detection for coordinated sector movements"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "detector"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.0"
websockets = "^12.0"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.0"
numpy = ">=1.26.0,<3.0.0"
pyyaml = "^6.0"
click = "^8.1.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detector = "detector.main:cli"
