[tool.poetry]
name = "binance-alert-manager"
version = "0.1.0"
description = "Binance Sector Shot Detector - Real-time anomaly detection for coordinated sector movements"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "detector"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.13.0"
websockets = "^16.0"
aiosqlite = "^0.22.0"
sqlalchemy = "^2.0.45"
numpy = ">=2.4.0,<3.0.0"
pyyaml = "^6.0.3"
click = "^8.3.0"
structlog = "^25.5.0"
# Performance optimizations for 500+ symbols
orjson = "^3.11.0"  # 4-6x faster JSON parsing
uvloop = {version = "^0.22.0", markers = "sys_platform != 'win32'"}  # 2-5x faster event loop (Linux/macOS only)
picows = {version = "^1.10.0", markers = "sys_platform != 'win32'"}  # 2-3x faster WebSocket (Linux/macOS only, auto-fallback to websockets)

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detector = "detector.main:cli"
